force-app/main/default/objects/SFL5_Assign__c/fields/Client_Requestor__c.field-meta.xml
<CustomField>
    <fullName>Client_Requestor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Requestor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>R00N3000000279ZzEAI</relationshipName>
    <type>Lookup</type>
</CustomField>