force-app/main/default/objects/SFL5_Assign__c/fields/Cost_Rate_Per_Hour__c.field-meta.xml
<CustomField>
    <fullName>Cost_Rate_Per_Hour__c</fullName>
    <label>Cost Rate Per Hour</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>