force-app/main/default/objects/SFL5_Assign__c/fields/Describe_consulting_potential__c.field-meta.xml
<CustomField>
    <fullName>Describe_consulting_potential__c</fullName>
    <label>Describe consulting potential</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>