force-app/main/default/objects/SFL5_Assign__c/fields/Effective_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_End_Date__c</fullName>
    <label>Effective End Date</label>
    <type>Date</type>
</CustomField>