force-app/main/default/objects/SFL5_Assign__c/fields/Estimated_Costs__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Costs__c</fullName>
    <formula
  >Cost_Rate_Per_Hour__c  *  (  Requested_Consulting_Days__c  * 8 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>