force-app/main/default/objects/SFL5_Assign__c/fields/Fri_booked_detail__c.field-meta.xml
<CustomField>
    <fullName>Fri_booked_detail__c</fullName>
    <label>Friday Detail</label>
    <type>TextArea</type>
</CustomField>