force-app/main/default/objects/SFL5_Assign__c/fields/Fulfillment_Date__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Date__c</fullName>
    <label>I need to know by</label>
    <type>Date</type>
</CustomField>