force-app/main/default/objects/SFL5_Assign__c/fields/Mon_booked_detail__c.field-meta.xml
<CustomField>
    <fullName>Mon_booked_detail__c</fullName>
    <label>Monday Detail</label>
    <type>TextArea</type>
</CustomField>