force-app/main/default/objects/SFL5_Assign__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>R00N3000000279ZPEAY</relationshipName>
    <type>Lookup</type>
</CustomField>