force-app/main/default/objects/SFL5_Assign__c/fields/Projects__c.field-meta.xml
<CustomField>
    <fullName>Projects__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>SFL5_Projects__c</referenceTo>
    <relationshipName>R00N3000000279c5EAA</relationshipName>
    <type>Lookup</type>
</CustomField>