force-app/main/default/objects/SFL5_Assign__c/fields/Request_Age_Days__c.field-meta.xml
<CustomField>
    <fullName>Request_Age_Days__c</fullName>
    <formula>(NOW()-CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request Age (Days)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>