force-app/main/default/objects/SFL5_Assign__c/fields/Requested_Consulting_Days__c.field-meta.xml
<CustomField>
    <fullName>Requested_Consulting_Days__c</fullName>
    <label>Requested Consulting Days</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>