force-app/main/default/objects/SFL5_Assign__c/fields/Requested_Role__c.field-meta.xml
<CustomField>
    <fullName>Requested_Role__c</fullName>
    <label>Requested Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Principle Consultant</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Technical Resource</fullName>
            </value>
            <value>
                <fullName>Trainer</fullName>
            </value>
            <value>
                <fullName>Auditor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>