force-app/main/default/objects/SFL5_Assign__c/fields/SFL5_Resource__c.field-meta.xml
<CustomField>
    <fullName>SFL5_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Requestor</label>
    <referenceTo>SFL5_Resource__c</referenceTo>
    <relationshipName>R00N3000000279V9EAI</relationshipName>
    <type>Lookup</type>
</CustomField>