force-app/main/default/objects/SFL5_Assign__c/fields/Tue_booked__c.field-meta.xml
<CustomField>
    <fullName>Tue_booked__c</fullName>
    <label>Tue %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>