force-app/main/default/objects/SFL5_Assign__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New resource assignement</fullName>
                <default>true</default>
                <label>New resource assignement</label>
            </value>
            <value>
                <fullName>Replacement/Assignment Swap</fullName>
            </value>
            <value>
                <fullName>Extension of existing assignment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>