force-app/main/default/objects/SFL5_Assign__c/fields/Wed_booked__c.field-meta.xml
<CustomField>
    <fullName>Wed_booked__c</fullName>
    <label>Wed %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>