force-app/main/default/objects/SFL5_Assign__c/fields/Wed_booked_detail__c.field-meta.xml
<CustomField>
    <fullName>Wed_booked_detail__c</fullName>
    <label>Wednesday Detail</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>