force-app/main/default/objects/SFL5_Assign__c/fields/Weekly_Utilization__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Utilization__c</fullName>
    <formula
  >(  Sat_booked__c  +  Sun_booked__c  +   Fri_booked__c  +  Thu_booked__c   + Wed_booked__c +   Tue_booked__c   + Mon_booked__c  )  / 5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weekly Utilization</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>